fix enum type conversion
upper case required, or workarounds...
https://github.com/OpenAPITools/openapi-generator/issues/3337
